--- a/TP5/index.html
+++ b/TP5/index.html
@@ -4,7 +4,7 @@
     <title>Shopping Cart</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </head>
   <body>
     <head>
@@ -13,28 +13,28 @@
     <h2>Products</h2>
     <section id="products">
       <article data-id="1">
-        <h2>Gaming Console</h2>
+        <h2 class="name">Gaming Console</h2>
         <img src="https://picsum.photos/200?1">
         <p class="price">200</p>
         <input class="quantity" type="number" value="1">
         <button class="buy">Buy</button>
       </article>
       <article data-id="2">
-        <h2>Mobile Phone</h2>
+        <h2 class="name">Mobile Phone</h2>
         <img src="https://picsum.photos/200?2">
         <p class="price">150</p>
         <input class="quantity" type="number" value="1">
         <button class="buy">Buy</button>
       </article>
       <article data-id="3">
-        <h2>Smartwatch</h2>
+        <h2 class="name">Smartwatch</h2>
         <img src="https://picsum.photos/200?3">
         <p class="price">50</p>
         <input class="quantity" type="number" value="1">
         <button class="buy">Buy</button>
       </article>
       <article data-id="4">
-        <h2>Laptop</h2>
+        <h2 class="name">Laptop</h2>
         <img src="https://picsum.photos/200?4">
         <p class="price">525</p>
         <input class="quantity" type="number" value="1">
